--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -22,10 +22,16 @@
             border: 1px solid #2a6f2a;
             padding: 8px;
             text-align: left;
+            width: 200px; /* Ajuste o valor conforme precisar */
+            word-wrap: break-word; /* Quebra texto longo */
         }
         th {
             background-color: #4CAF50; /* verde IFRN */
             color: white;
+        }
+        .table-wrapper {
+            max-height: 1000px;  /* altura máxima que a tabela pode ter */
+            overflow-y: auto;   /* ativa a rolagem vertical quando passar disso */
         }
     </style>
 </head>
