--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,43 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}IFLanche{% endblock %}</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e6f0e6; /* verde claro */
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-        h2 {
-            color: #2a6f2a; /* verde IFRN */
-        }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid #2a6f2a;
-            padding: 8px;
-            text-align: left;
-            width: 200px; /* Ajuste o valor conforme precisar */
-            word-wrap: break-word; /* Quebra texto longo */
-        }
-        th {
-            background-color: #4CAF50; /* verde IFRN */
-            color: white;
-        }
-        .table-wrapper {
-            max-height: 1000px;  /* altura máxima que a tabela pode ter */
-            overflow-y: auto;   /* ativa a rolagem vertical quando passar disso */
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>{% block title %}IFLanche{% endblock %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 </head>
 <body>
-    {% block content %}
-    <!-- conteúdo principal vai aqui -->
-    {% endblock %}
+  {% block content %}{% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
