--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -52,6 +52,9 @@
       <button type="submit" class="btn btn-success w-100">
         Entrar com SUAP
       </button>
+      <p class="mt-4 text-center">
+        É funcionário da cantina? <a href="{% url 'admin_login' %}">Clique aqui</a>
+      </p>
     </form>
   </div>
 
