ajustando html e css da admin

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -53,7 +53,7 @@
         Entrar com SUAP
       </button>
       <p class="mt-4 text-center">
-        É funcionário da cantina? <a href="{% url 'admin_login' %}">Clique aqui</a>
+        É funcionário da cantina? <a href="{% url 'registrar_admin' %}">Clique aqui</a>
       </p>
     </form>
   </div>
